Fix div wrap and footer on map page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -336,8 +336,8 @@ img.img-responsive {
 }
 .map-page-text{
   margin-top: 50px;
-  margin-left: 175px;
-  margin-right: 175px;
+  margin-left: 200px;
+  margin-right: 200px;
   margin-bottom: 100px;
   background-color: #ffffff;
   horizontal-align: center;
